--- a/app/templates/base.php.handlebars
+++ b/app/templates/base.php.handlebars
@@ -7,7 +7,7 @@ require_once PATH_THIRD . '{{fileName}}/config.php';
  * @package		{{addonName}}
  * @subpackage	ThirdParty
  * @category	Modules
- * @author    	{{authorName}}
+ * @author    	{{authorName}} <{{authorEmail}}>
  * @copyright 	Copyright (c) {{currentYear}} {{authorName}} ({{authorUrl}})
  * @link		{{authorUrl}}
  */
