--- a/app/templates/helper.php.handlebars
+++ b/app/templates/helper.php.handlebars
@@ -1,14 +1,13 @@
-<?php if ( ! defined('BASEPATH')) exit('No direct script access allowed');
+<?php  if ( ! defined( 'BASEPATH' ) ) exit( 'No direct script access allowed' );
+
 
 /**
- * MX 2 Step Authentication helper functions
- *
- * @package  MX 2 Step Authentication
- * @subpackage ThirdParty
- * @category Modules
- * @author    Max Lazar <max@eec.ms>
- * @copyright Copyright (c) 2014 Max Lazar (http://www.eec.ms)
- * @link  http://www.eec.ms/
+ * @package		{{addonName}}
+ * @subpackage	ThirdParty
+ * @category	Modules
+ * @author    	{{authorName}} <{{authorEmail}}>
+ * @copyright 	Copyright (c) {{currentYear}} {{authorName}} ({{authorUrl}})
+ * @link		{{authorUrl}}
  */
 
 /**
