--- a/app/templates/mcp.php.handlebars
+++ b/app/templates/mcp.php.handlebars
@@ -11,7 +11,7 @@ if ( ! class_exists( '{{fileName}}_base' ) ) {
  * @package  {{addonName}}
  * @subpackage ThirdParty
  * @category Modules
- * @author     {{authorName}}
+ * @author     {{authorName}} <{{authorEmail}}>
  * @copyright  Copyright (c) {{currentYear}} {{authorName}} ({{authorUrl}})
  * @link  {{authorUrl}}
  */
